# twamp-light

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  lint.sh  toolchain-aarch64-linux-musl.cmake
include/: Client.h  Counter.h  Server.h  TimeSync.h  packetlist.h  packets.h  utils.hpp
jenkins/: Jenkinsfile
src/: utils.cpp
src/client/: Client.cpp  main_client.cpp
src/server/: Server.cpp  main_server.cpp
tests/: test.sh  test_helpers.sh  test_ipv6.sh  valgrind_test.sh  valgrind_test_collator.sh  valgrind_test_ipv6.sh
tests/integration/: test_cli_flags.sh  test_edge_cases.sh  test_output_formats.sh
tests/unit/: test_packetlist.cpp  test_packets.cpp  test_utils.cpp
